# hydro_glasses

./: 404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: docs.yml
api/lanczos/: index.html
api/phonon/: index.html
docs/: api.md  getting-started.md  index.md
docs/api/: lanczos.md  phonon.md
docs/examples/: lanczos_basics.ipynb  vdsf_heatmap.ipynb
examples/: sqw_grid_notebook.npz
examples/data/: eigval.npy  positions.npy
examples/lanczos_basics/: index.html
examples/vdsf_heatmap/: index.html
getting-started/: index.html
search/: search_index.json
src/hydroglass/: __init__.py  lanczos.py  version.py
src/hydroglass/spectra/: __init__.py  broadening.py  phonon.py
tests/: test_lanczos_core.py  test_lanczos_terminator.py  test_spectra_broadening.py  test_spectra_phonons.py
